[package]
name = "mozimd"
version = "0.1.0"
authors = ["Gris Ge <fge@redhat.com>"]
edition = "2018"
description = "DHCP Client Daemon with Well Defined API"
license = "Apache-2.0"

[[bin]]
name = "mozimd"
path = "mozimd.rs"

[dependencies]
mozim = { path = "../lib" }
tokio = { version = "0.3", features = ["full"] }
